--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div style="position: relative; min-height: 100vh;">
-      <app-root></app-root>
+      <div class="pb-32">
+        <app-root></app-root>
+      </div>
     </div>
   </body>
 </html>
