comentarios en algunos cruds

--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -145,7 +145,7 @@
             <td>AppComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/2)</span>
+                <span class="coverage-count">(0/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -167,33 +167,33 @@
             </td>
             <td>component</td>
             <td>AddAdComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/13)</span>
+            <td align="right" data-sort="23">
+                <span class="coverage-percent">23 %</span>
+                <span class="coverage-count">(3/13)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/EditAdComponent.html">src/app/components/admin/ad/edit-ad/edit-ad.component.ts</a>
             </td>
             <td>component</td>
             <td>EditAdComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/15)</span>
+            <td align="right" data-sort="26">
+                <span class="coverage-percent">26 %</span>
+                <span class="coverage-count">(4/15)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ListAdComponent.html">src/app/components/admin/ad/list-ad/list-ad.component.ts</a>
             </td>
             <td>component</td>
             <td>ListAdComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/16)</span>
+            <td align="right" data-sort="46">
+                <span class="coverage-percent">46 %</span>
+                <span class="coverage-count">(7/15)</span>
             </td>
         </tr>
         <tr class="low">
@@ -217,31 +217,31 @@
             <td>AdminHomeComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+                <span class="coverage-count">(0/15)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/AddBarComponent.html">src/app/components/admin/bar/add-bar/add-bar.component.ts</a>
             </td>
             <td>component</td>
             <td>AddBarComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/27)</span>
+            <td align="right" data-sort="85">
+                <span class="coverage-percent">85 %</span>
+                <span class="coverage-count">(23/27)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/EditBarComponent.html">src/app/components/admin/bar/edit-bar/edit-bar.component.ts</a>
             </td>
             <td>component</td>
             <td>EditBarComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/31)</span>
+            <td align="right" data-sort="32">
+                <span class="coverage-percent">32 %</span>
+                <span class="coverage-count">(10/31)</span>
             </td>
         </tr>
         <tr class="low">
@@ -256,40 +256,40 @@
                 <span class="coverage-count">(0/15)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/AddDrinkComponent.html">src/app/components/admin/drink/add-drink/add-drink.component.ts</a>
             </td>
             <td>component</td>
             <td>AddDrinkComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/44)</span>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(14/42)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/EditDrinkComponent.html">src/app/components/admin/drink/edit-drink/edit-drink.component.ts</a>
             </td>
             <td>component</td>
             <td>EditDrinkComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/44)</span>
+            <td align="right" data-sort="40">
+                <span class="coverage-percent">40 %</span>
+                <span class="coverage-count">(17/42)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ListDrinkComponent.html">src/app/components/admin/drink/list-drink/list-drink.component.ts</a>
             </td>
             <td>component</td>
             <td>ListDrinkComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/16)</span>
+            <td align="right" data-sort="46">
+                <span class="coverage-percent">46 %</span>
+                <span class="coverage-count">(7/15)</span>
             </td>
         </tr>
         <tr class="low">
@@ -431,21 +431,21 @@
             </td>
             <td>component</td>
             <td>BarsListComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/17)</span>
+            <td align="right" data-sort="10">
+                <span class="coverage-percent">10 %</span>
+                <span class="coverage-count">(2/19)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/DetailBarComponent.html">src/app/components/bars/detail-bar/detail-bar.component.ts</a>
             </td>
             <td>component</td>
             <td>DetailBarComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/12)</span>
+            <td align="right" data-sort="35">
+                <span class="coverage-percent">35 %</span>
+                <span class="coverage-count">(5/14)</span>
             </td>
         </tr>
         <tr class="low">
@@ -457,7 +457,7 @@
             <td>DrinklyTeamComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/7)</span>
+                <span class="coverage-count">(0/16)</span>
             </td>
         </tr>
         <tr class="low">
@@ -472,52 +472,52 @@
                 <span class="coverage-count">(0/17)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/DrinksListComponent.html">src/app/components/drinks/drinks-list/drinks-list.component.ts</a>
             </td>
             <td>component</td>
             <td>DrinksListComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/20)</span>
+            <td align="right" data-sort="45">
+                <span class="coverage-percent">45 %</span>
+                <span class="coverage-count">(9/20)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/FilterChildComponent.html">src/app/components/drinks/filter-child/filter-child.component.ts</a>
             </td>
             <td>component</td>
             <td>FilterChildComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(2/6)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/FilterParentComponent.html">src/app/components/drinks/filter-parent/filter-parent.component.ts</a>
             </td>
             <td>component</td>
             <td>FilterParentComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/27)</span>
+            <td align="right" data-sort="50">
+                <span class="coverage-percent">50 %</span>
+                <span class="coverage-count">(13/26)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ShowFilterComponent.html">src/app/components/drinks/show-filter/show-filter.component.ts</a>
             </td>
             <td>component</td>
             <td>ShowFilterComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/43)</span>
+            <td align="right" data-sort="51">
+                <span class="coverage-percent">51 %</span>
+                <span class="coverage-count">(22/43)</span>
             </td>
         </tr>
         <tr class="low">
@@ -553,7 +553,7 @@
             <td>HomeComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/20)</span>
+                <span class="coverage-count">(0/32)</span>
             </td>
         </tr>
         <tr class="low">
@@ -565,7 +565,7 @@
             <td>JuegosComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/33)</span>
+                <span class="coverage-count">(0/34)</span>
             </td>
         </tr>
         <tr class="low">
@@ -661,7 +661,7 @@
             <td>ProfileComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/18)</span>
+                <span class="coverage-count">(0/25)</span>
             </td>
         </tr>
         <tr class="low">
@@ -673,7 +673,7 @@
             <td>RecipeComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/13)</span>
+                <span class="coverage-count">(0/18)</span>
             </td>
         </tr>
         <tr class="low">
