--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -68,9 +68,15 @@
         <li>
             <b>@angular/platform-browser-dynamic</b> : ~8.2.9</li>
         <li>
+            <b>@angular/pwa</b> : ^0.1000.1</li>
+        <li>
             <b>@angular/router</b> : ~8.2.9</li>
         <li>
+            <b>@angular/service-worker</b> : ^8.2.14</li>
+        <li>
             <b>@auth0/angular-jwt</b> : ^4.2.0</li>
+        <li>
+            <b>@babel/compat-data</b> : ^7.8.0</li>
         <li>
             <b>@cloudinary/angular-5.x</b> : ^1.2.2</li>
         <li>
