--- a/documentation/modules/AppRoutingModule.html
+++ b/documentation/modules/AppRoutingModule.html
@@ -138,7 +138,8 @@ const routes: Routes &#x3D; [
   { 
     path: &quot;bar/:id&quot;, 
     component: DetailBarComponent, 
-    canActivate: [AuthGuard]},
+    canActivate: [AuthGuard]
+  },
   {
     path: &quot;drinks/filter&quot;,
     component: FilterParentComponent,
@@ -167,12 +168,17 @@ const routes: Routes &#x3D; [
   },
 
   { path: &quot;drink/:id&quot;, component: RecipeComponent,
-    canActivate: [AuthGuard]},
+    canActivate: [AuthGuard]
+  },
 
   { path: &quot;register&quot;, component: RegisterComponent },
   { path: &quot;login&quot;, component: LoginComponent },
-  { path: &quot;profile&quot;, component: ProfileComponent, canActivate: [AuthGuard] },
-  { path: &quot;edit-user/:id&quot;, component: EditUserComponent, canActivate: [AuthGuard] },
+  { path: &quot;profile&quot;, component: ProfileComponent, 
+  canActivate: [AuthGuard] 
+},
+  { path: &quot;edit-user/:id&quot;, component: EditUserComponent, 
+  canActivate: [AuthGuard] 
+},
   {
     path: &#x27;externalRedirect&#x27;,
     canActivate: [externalUrlProvider],
@@ -180,15 +186,17 @@ const routes: Routes &#x3D; [
     component: NotFoundComponent,
   },
   
-  { path: &quot;home&quot;, component: HomeComponent },
+  { path: &quot;&quot;, component: HomeComponent },
 
   { path: &quot;games&quot;, component: JuegosComponent,
-    canActivate: [AuthGuard]},
+    canActivate: [AuthGuard]
+  },
 
   // ADMIN&#x27;S ROUTES
   { path: &quot;admin&quot;, 
     component: AdminHomeComponent, 
-    canActivate: [AdminAuthGuard]},
+    canActivate: [AdminAuthGuard]
+  },
   {
     path: &quot;admin/ingredient/add&quot;,
     component: AddIngredientComponent,
