casi listos los cruds

--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -232,28 +232,28 @@
                 <span class="coverage-count">(23/27)</span>
             </td>
         </tr>
-        <tr class="medium">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/EditBarComponent.html">src/app/components/admin/bar/edit-bar/edit-bar.component.ts</a>
             </td>
             <td>component</td>
             <td>EditBarComponent</td>
-            <td align="right" data-sort="32">
-                <span class="coverage-percent">32 %</span>
-                <span class="coverage-count">(10/31)</span>
+            <td align="right" data-sort="87">
+                <span class="coverage-percent">87 %</span>
+                <span class="coverage-count">(27/31)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ListBarComponent.html">src/app/components/admin/bar/list-bar/list-bar.component.ts</a>
             </td>
             <td>component</td>
             <td>ListBarComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/15)</span>
+            <td align="right" data-sort="71">
+                <span class="coverage-percent">71 %</span>
+                <span class="coverage-count">(10/14)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -292,76 +292,64 @@
                 <span class="coverage-count">(7/15)</span>
             </td>
         </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/AddGameComponent.html">src/app/components/admin/game/add-game/add-game.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>AddGameComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/16)</span>
-            </td>
-        </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/EditGameComponent.html">src/app/components/admin/game/edit-game/edit-game.component.ts</a>
             </td>
             <td>component</td>
             <td>EditGameComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/19)</span>
+            <td align="right" data-sort="78">
+                <span class="coverage-percent">78 %</span>
+                <span class="coverage-count">(15/19)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ListGameComponent.html">src/app/components/admin/game/list-game/list-game.component.ts</a>
             </td>
             <td>component</td>
             <td>ListGameComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/13)</span>
+            <td align="right" data-sort="63">
+                <span class="coverage-percent">63 %</span>
+                <span class="coverage-count">(7/11)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/AddIngredientComponent.html">src/app/components/admin/ingredient/add-ingredient/add-ingredient.component.ts</a>
             </td>
             <td>component</td>
             <td>AddIngredientComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/14)</span>
+            <td align="right" data-sort="69">
+                <span class="coverage-percent">69 %</span>
+                <span class="coverage-count">(9/13)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/EditIngredientComponent.html">src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.ts</a>
             </td>
             <td>component</td>
             <td>EditIngredientComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/16)</span>
+            <td align="right" data-sort="75">
+                <span class="coverage-percent">75 %</span>
+                <span class="coverage-count">(12/16)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ListIngredientComponent.html">src/app/components/admin/ingredient/list-ingredient/list-ingredient.component.ts</a>
             </td>
             <td>component</td>
             <td>ListIngredientComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/16)</span>
+            <td align="right" data-sort="66">
+                <span class="coverage-percent">66 %</span>
+                <span class="coverage-count">(10/15)</span>
             </td>
         </tr>
         <tr class="low">
@@ -371,9 +359,9 @@
             </td>
             <td>component</td>
             <td>RequiredFieldComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+            <td align="right" data-sort="25">
+                <span class="coverage-percent">25 %</span>
+                <span class="coverage-count">(1/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -388,40 +376,40 @@
                 <span class="coverage-count">(0/16)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/AddZoneComponent.html">src/app/components/admin/zone/add-zone/add-zone.component.ts</a>
             </td>
             <td>component</td>
             <td>AddZoneComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/9)</span>
+            <td align="right" data-sort="55">
+                <span class="coverage-percent">55 %</span>
+                <span class="coverage-count">(5/9)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/EditZoneComponent.html">src/app/components/admin/zone/edit-zone/edit-zone.component.ts</a>
             </td>
             <td>component</td>
             <td>EditZoneComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/12)</span>
+            <td align="right" data-sort="66">
+                <span class="coverage-percent">66 %</span>
+                <span class="coverage-count">(8/12)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ListZoneComponent.html">src/app/components/admin/zone/list-zone/list-zone.component.ts</a>
             </td>
             <td>component</td>
             <td>ListZoneComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/14)</span>
+            <td align="right" data-sort="69">
+                <span class="coverage-percent">69 %</span>
+                <span class="coverage-count">(9/13)</span>
             </td>
         </tr>
         <tr class="low">
