listos cruds bars, games, zones, ingredients

--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -227,9 +227,9 @@
             </td>
             <td>component</td>
             <td>AddBarComponent</td>
-            <td align="right" data-sort="85">
-                <span class="coverage-percent">85 %</span>
-                <span class="coverage-count">(23/27)</span>
+            <td align="right" data-sort="88">
+                <span class="coverage-percent">88 %</span>
+                <span class="coverage-count">(24/27)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -239,21 +239,21 @@
             </td>
             <td>component</td>
             <td>EditBarComponent</td>
-            <td align="right" data-sort="87">
-                <span class="coverage-percent">87 %</span>
-                <span class="coverage-count">(27/31)</span>
+            <td align="right" data-sort="90">
+                <span class="coverage-percent">90 %</span>
+                <span class="coverage-count">(28/31)</span>
             </td>
         </tr>
-        <tr class="good">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ListBarComponent.html">src/app/components/admin/bar/list-bar/list-bar.component.ts</a>
             </td>
             <td>component</td>
             <td>ListBarComponent</td>
-            <td align="right" data-sort="71">
-                <span class="coverage-percent">71 %</span>
-                <span class="coverage-count">(10/14)</span>
+            <td align="right" data-sort="78">
+                <span class="coverage-percent">78 %</span>
+                <span class="coverage-count">(11/14)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -299,9 +299,9 @@
             </td>
             <td>component</td>
             <td>EditGameComponent</td>
-            <td align="right" data-sort="78">
-                <span class="coverage-percent">78 %</span>
-                <span class="coverage-count">(15/19)</span>
+            <td align="right" data-sort="84">
+                <span class="coverage-percent">84 %</span>
+                <span class="coverage-count">(16/19)</span>
             </td>
         </tr>
         <tr class="good">
@@ -311,33 +311,33 @@
             </td>
             <td>component</td>
             <td>ListGameComponent</td>
-            <td align="right" data-sort="63">
-                <span class="coverage-percent">63 %</span>
-                <span class="coverage-count">(7/11)</span>
+            <td align="right" data-sort="72">
+                <span class="coverage-percent">72 %</span>
+                <span class="coverage-count">(8/11)</span>
             </td>
         </tr>
-        <tr class="good">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/AddIngredientComponent.html">src/app/components/admin/ingredient/add-ingredient/add-ingredient.component.ts</a>
             </td>
             <td>component</td>
             <td>AddIngredientComponent</td>
-            <td align="right" data-sort="69">
-                <span class="coverage-percent">69 %</span>
-                <span class="coverage-count">(9/13)</span>
+            <td align="right" data-sort="76">
+                <span class="coverage-percent">76 %</span>
+                <span class="coverage-count">(10/13)</span>
             </td>
         </tr>
-        <tr class="good">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/EditIngredientComponent.html">src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.ts</a>
             </td>
             <td>component</td>
             <td>EditIngredientComponent</td>
-            <td align="right" data-sort="75">
-                <span class="coverage-percent">75 %</span>
-                <span class="coverage-count">(12/16)</span>
+            <td align="right" data-sort="81">
+                <span class="coverage-percent">81 %</span>
+                <span class="coverage-count">(13/16)</span>
             </td>
         </tr>
         <tr class="good">
@@ -347,9 +347,9 @@
             </td>
             <td>component</td>
             <td>ListIngredientComponent</td>
-            <td align="right" data-sort="66">
-                <span class="coverage-percent">66 %</span>
-                <span class="coverage-count">(10/15)</span>
+            <td align="right" data-sort="73">
+                <span class="coverage-percent">73 %</span>
+                <span class="coverage-count">(11/15)</span>
             </td>
         </tr>
         <tr class="low">
@@ -383,9 +383,9 @@
             </td>
             <td>component</td>
             <td>AddZoneComponent</td>
-            <td align="right" data-sort="55">
-                <span class="coverage-percent">55 %</span>
-                <span class="coverage-count">(5/9)</span>
+            <td align="right" data-sort="66">
+                <span class="coverage-percent">66 %</span>
+                <span class="coverage-count">(6/9)</span>
             </td>
         </tr>
         <tr class="good">
@@ -395,21 +395,21 @@
             </td>
             <td>component</td>
             <td>EditZoneComponent</td>
-            <td align="right" data-sort="66">
-                <span class="coverage-percent">66 %</span>
-                <span class="coverage-count">(8/12)</span>
+            <td align="right" data-sort="75">
+                <span class="coverage-percent">75 %</span>
+                <span class="coverage-count">(9/12)</span>
             </td>
         </tr>
-        <tr class="good">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ListZoneComponent.html">src/app/components/admin/zone/list-zone/list-zone.component.ts</a>
             </td>
             <td>component</td>
             <td>ListZoneComponent</td>
-            <td align="right" data-sort="69">
-                <span class="coverage-percent">69 %</span>
-                <span class="coverage-count">(9/13)</span>
+            <td align="right" data-sort="76">
+                <span class="coverage-percent">76 %</span>
+                <span class="coverage-count">(10/13)</span>
             </td>
         </tr>
         <tr class="low">
